Added a JavaScript Functionality

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Learn Javascript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <script> alert("Hello World");</script>
 </head>
 <body>
-    
+    <div>Hello World</div>
+    <p>This page includes an alert Written in JavaScript</p>
 </body>
 </html>
